# Task-HMD

./: .gitignore  ADMIN_AUTH.md  README.md
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2026_04_07_2128-53c52bd9cf6c_create_tables.py  2026_04_08_1654-c91c333f162b_update_user_model.py  2026_04_08_1835-08be960c5ba0_update_request_model.py  2026_04_10_1900-032048eab15c_add_user_notificaion_model_and_update_.py  2026_04_10_1910-1664582e6d18_fix_models.py  2026_04_10_2101-0cef71ab930a_update_request_and_user_models.py  2026_04_13_0250-263dc2fcb15e_update_request_model.py
backend/src/: __init__.py  main.py
backend/src/admin/: __init__.py  auth.py  router.py
backend/src/admin/models/: news.py  notification.py  request.py  user.py  user_notification.py
backend/src/api/: dependencies.py
backend/src/api/v1/: router.py
backend/src/core/: config.py  exceptions.py  security.py
backend/src/database/: __init__.py  database.py
backend/src/database/models/: base.py  news.py  notification.py  request.py  user.py  user_notification.py
backend/src/repositories/: __init__.py  base.py  news.py  notification.py  request.py  user.py  user_notification.py
backend/src/schemas/: auth.py  news.py  notification.py  request.py  user.py  user_notification.py
backend/src/services/: __init__.py  auth.py  base.py  news.py  notification.py  request.py  user.py
backend/src/utils/: logger.py  serializator.py
backend/tests/: conftest.py
backend/tests/fixtures/: auth.py  notification.py  request.py  user.py
(+73 files in other folders)
